--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
 <style>
 	body {
 		font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+		color: #555;
+	}
+	a {
+		color: #34A57D;
+	}
+	a:hover {
+		color: #1B5440
+	}
+	header h1 {
+		margin-bottom: 0;
+		font-size: 18pt;
+	}
+	header h2 {
+		margin-top: 0.2em;
+		font-size: 12pt;
+		font-weight: normal;
+		color: #999;
+	}
+	header {
+		margin-bottom: 1em;
 	}
 	.wrapper {
 		width: 40em;
@@ -13,24 +33,56 @@
 		padding: 0 1em 0.5em 1em;
 	}
 	.thought-container {
-		padding: 0.5em 1em 0.25em 1em;
+		padding: 0.1em 1em 0.25em 1em;
 	}
 	.thought-container:hover {
-		background: #f0f0e9;
+		background: #f8f8f2;
+	}
+	.thought-container textarea {
+		margin-top: 0.9em;
 	}
 	.disclaimer, .tools {
 		font-size: small;
+	}
+	.disclaimer {
+		color: #999;
+	}
+	.editing > .thought-tools {
+		display: none;
+	}
+	textarea {
+		width: 100%;
+	}
+	button.cancel {
+		border: 1px solid #bbb;
+	    background: #fff;
+	    border-radius: 3px;
+	    padding: 5px;
+	    margin: 0.5em 0 0.5em 0;
+		color: #777;
+		cursor: pointer;
+	}
+	button.cancel:hover {
+		color: #34A57D;
+	}
+	p.thought-tools {
+		font-size: 8pt;
 	}
 </style>
 </head>
 <body>
 <div class="wrapper">
-	<img src="http://loremflickr.com/90/60/rubber%20duck" alt="Rubber Duck"/>
-	<h1>#rubber-duck</h1>
-	<p class="tools">
-		<a href="#" onclick="app.exportAll();return false">Export all thoughts</a> or <a href="#" onclick="app.clearAll();return false">clear everything</a>
-	</p>
+	<header>
+		<h1>#rubber-duck</h1>
+		<h2>Sometimes the solution appears when typing into a text box on the internet :duck:</h2>
+
+		<p class="tools">
+			<a href="#" onclick="app.exportAll();return false">Copy all thoughts</a> or <a href="#" onclick="app.clearAll();return false">clear everything</a>.
+		</p>
+	</header>
+
 	<div id="thoughts"></div>
+
 	<textarea 
 		id="thought"
 		rows="6" cols="80" placeholder="Ask your inner rubber duck" 
@@ -43,15 +95,15 @@
 			}
 		"
 		onkeydown="
-			if (this.innerHTML == '' && event.code == 'ArrowUp') {
+			if (this.value == '' && event.code == 'ArrowUp') {
 				app.editLastThought()
 			}
 		"></textarea>
 	<p class="disclaimer">
-		<em>Where does this go?</em> Nowhere, nothing leaves your browser. Thoughts are persisted in local browser storage. Feel free to copy your fully formed thoughts to a social network of rubber ducks of your choice. This is a toy by <a href="http://bendetat.com">Ben Scott</a>. It uses <a href="https://github.com/markdown-it/markdown-it">markdown-it</a> and <a href="http://tholman.com/github-corners/">GitHub Corners</a>. The header image is randomly selected from <a href="http://loremflickr.com">LoremFlickr</a> and could be any damn thing so YMMV.
+		<em>Where do my precious thoughts go?</em> Nowhere. Nothing leaves your browser. Thoughts are persisted in local browser storage. If the rubber duck muse doth not awaken, one can <a href="#" onclick="app.exportAll();return false">copy</a> one's fully formed thoughts to a social network of one's choice, or in a blinding rage one can <a href="#" onclick="app.clearAll();return false">clear</a> all of the thoughts. This is a toy by <a href="http://bendetat.com">Ben Scott</a>. It uses <a href="https://github.com/markdown-it/markdown-it">markdown-it</a> and <a href="http://tholman.com/github-corners/">GitHub Corners</a>. If something goes wrong, please <a href="https://github.com/bendetat/rubber-duck/issues">let me know</a> if you would be so kind, and try clearing local storage and reloading or just close the tab and make a cup of tea I guess. I bill in ten minute increments. The duck is free. Doesn't have a bill. Except ducks generally do have bills. This joke isn't really going anywhere. Probably need to workshop it. I could do that on this website. Swings and roundabouts, you see.
 	</p>
 
-	<a href="https://github.com" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+	<a href="https://github.com/bendetat/rubber-duck" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.3.1/markdown-it.min.js"></script>
@@ -60,26 +112,29 @@
 window.app = (function() {
 	var storedThoughts = []
 	var thoughtsEl = document.getElementById('thoughts')
-	var lastId = -1
 	var thoughtTextareaEl = document.getElementById('thought')
+
+	if (!localStorage.getItem('thoughts')) localStorage.setItem('thoughts', '[]')
 
 	initialize()
 
-	function initialize() {
-		var thoughtsFromLocalStorageJson = localStorage.getItem('thoughts') || '[]'
-	
-		storedThoughts = JSON.parse(thoughtsFromLocalStorageJson) || []
-		console.log(storedThoughts)
-
-		thoughtsEl.innerHTML = ''
-
-		for (var id = 0; id < storedThoughts.length; id ++) {
-			displayThought(id)
-		}
+	function scrollToBottom() {
+		window.scrollTo(0, document.body.scrollHeight)
 	}
 
-	function updateThoughtInUi(id) {
-		document.getElementById('thought' + id).innerHTML = window.markdownit().render(storedThoughts[id])
+	function initialize() {
+		storedThoughts = JSON.parse(localStorage.getItem('thoughts'))
+
+		thoughtsEl.innerHTML = ''
+		storedThoughts.forEach(displayThought)
+		bang(scrollToBottom)
+	}
+
+	function updateThoughtInUi(t) {
+		var thoughtDivEl = document.getElementById('thought' + t.id)
+
+		thoughtDivEl.innerHTML = window.markdownit().render(t.doc)
+		thoughtDivEl.parentNode.classList.remove('editing')
 	}
 
 	function bang(cb) {
@@ -87,46 +142,57 @@ window.app = (function() {
 	}
 
 	function saveThoughts() {
-		var goodThoughts = storedThoughts.filter(function(x) { return !!x })
-
-		localStorage.setItem('thoughts', JSON.stringify(goodThoughts))
+		localStorage.setItem('thoughts', JSON.stringify(storedThoughts))
 	}
 
-	function displayThought(id) {
+	function displayThought(t) {
 		var html = ''
 
 		html += '<div class="thought-container">'
-		html += '<div id="thought' + id + '"></div>'
-		html += '<p><small><a href="#" onclick="app.editThought(' + id + ');return false">edit</a> <a href="#" onclick="app.deleteThought(' + id + ')">delete</a></small></p>'
+		html += '<div id="thought' + t.id + '"></div>'
+		html += '<p class="thought-tools"><a href="#" onclick="app.editThought(' + t.id + ');return false">edit</a> <a href="#" onclick="app.deleteThought(' + t.id + ')">delete</a></p>'
 		html += '</div>'
 
 		thoughtsEl.innerHTML += html
 
-		updateThoughtInUi(id)
+		updateThoughtInUi(t)
+	}
+
+	function findThoughtById(id) {
+		return storedThoughts.filter(function(x) { return x.id == id })[0]
+	}
+
+	function editThought(id) {
+		var thoughtDivEl = document.getElementById('thought' + id)
+		var thought = findThoughtById(id)
+
+		thoughtDivEl.innerHTML = '<textarea rows="6" cols="80" onkeypress="return app.finishEditThought(event, this, ' + id + ')" onkeydown="if(event.keyCode == 27) app.cancelEditThought(' + id + ')" onblur="app.cancelEditThought(' + id + ')">' + thought.doc + '</textarea><button class="cancel" onclick="app.cancelEditThought(' + id + ')">Cancel</button>'
+		thoughtDivEl.parentNode.classList.add('editing')
+
+		var textAreaEl = thoughtDivEl.firstChild
+
+		textAreaEl.focus()
+		bang(function() {
+			var l = textAreaEl.value.length
+			textAreaEl.setSelectionRange(l, l)
+		})
 	}
 
 	return {
 		submit: function() {
-			lastId ++
-			storedThoughts[lastId] = thoughtTextareaEl.value
+			var thought = {
+				id: Math.floor(Math.random() * 1000000),
+				doc: thoughtTextareaEl.value
+			}
+
+			storedThoughts.push(thought)
 			saveThoughts()
 			thoughtTextareaEl.value = ''
 
-			displayThought(lastId)
+			displayThought(thought)
+			scrollToBottom()
 		},
-		editThought: function(id) {
-			var thoughtDivEl = document.getElementById('thought' + id)
-
-			thoughtDivEl.innerHTML = '<textarea rows="6" cols="80" onkeypress="return app.finishEditThought(event, this, ' + id + ')" onkeydown="if(event.keyCode == 27) app.cancelEditThought(' + id + ')" onblur="app.cancelEditThought(' + id + ')">' + storedThoughts[id] + '</textarea><br/><br/><button onclick="app.cancelEditThought(' + id + ')">Cancel</button>'
-
-			var textAreaEl = thoughtDivEl.firstElementChild
-
-			textAreaEl.focus()
-			bang(function() {
-				var l = textAreaEl.value.length
-				textAreaEl.setSelectionRange(l, l)
-			})
-		},
+		editThought: editThought,
 		finishEditThought: function(event, el, id) {
 			if (event.keyCode == 27) {
 				updateThoughtInUi(id)
@@ -134,40 +200,52 @@ window.app = (function() {
 			}
 			if (event.keyCode != 13 || event.shiftKey) return true
 
-			storedThoughts[id] = el.value
+			var thought = findThoughtById(id)
+
+			thought.doc = el.value
+
 			saveThoughts()
-			updateThoughtInUi(id)
+			updateThoughtInUi(thought)
 
 			bang(function() {
 				thoughtTextareaEl.focus()
 			})
 		},
 		cancelEditThought: function(id) {
-			updateThoughtInUi(id)
+			var thought = findThoughtById(id)
+
+			updateThoughtInUi(thought)
+			bang(function() {
+				thoughtTextareaEl.focus()
+			})
 		},
 		editLastThought: function() { 
-			editThought(lastId)
+			if (!storedThoughts.length) return
+			
+			editThought(storedThoughts[storedThoughts.length - 1].id)
 		},
 		deleteThought: function(id) {
 			var el = document.getElementById('thought' + id)
 
-			el.nextSibling.remove()
-			el.remove()
+			el.parentNode.remove()
 
-			storedThoughts[id] = null
+			var thought = findThoughtById(id)
+			var index = storedThoughts.indexOf(thought)
+
+			storedThoughts.splice(index, 1)
 			saveThoughts()
 		},
 		exportAll: function() {
 			var allThoughts = storedThoughts
-				.filter(function(x) { return !!x })
+				.map(function(x) { return x.doc })
 				.join('\n\n')
 
-			window.prompt("Copy all thoughts. It looks broken but trust me when you paste it, it's :tophat:.", allThoughts)
+			window.prompt("Copy all of your #rubber-duck thoughts. It looks broken but trust me, what you paste will be :tophat:.", allThoughts)
 		},
 		clearAll: function () {
 			if (!confirm('Are you sure you want to clear all #rubber-duck thoughts?')) return
 
-			localStorage.setItem('thoughts', null)
+			localStorage.setItem('thoughts', '[]')
 			initialize()
 		}
 	}
