fix meta description tag

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Rubber Duck</title>
-<meta content="Sometimes the solution appears when typing into a text box on the internet :duck:"/>
+<meta name="description" content="Sometimes the solution appears when typing into a text box on the internet :duck:"/>
 <style>
 	body {
 		font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
