--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Rubber Duck</title>
 <meta name="description" content="Sometimes the solution appears when typing into a text box on the internet :duck:"/>
+<meta name="og:description" content="Sometimes the solution appears when typing into a text box on the internet :duck:"/>
 <style>
 	body {
 		font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
