--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
 			}
 		"></textarea>
 	<p class="disclaimer">
+		<em>This works sort of like Slack.</em> Type in a thought. Press &lt;enter&gt; to 'send' it. Press &lt;up&gt; to edit the last thought, or just click 'edit'. Press &lt;escape&gt; to cancel editing, or &lt;enter&gt; to save it. Hold down &lt;shift&gt; and press &lt;enter&gt; to insert a new line. Use <a href="https://daringfireball.net/projects/markdown/">Markdown</a> to format your thoughts.
+		<br/>
+		<br/>
 		<em>Where do my precious thoughts go?</em> Nowhere. Nothing leaves your browser. Thoughts are persisted in local browser storage. If the rubber duck muse doth not awaken, one can <a href="#" onclick="app.exportAll();return false">copy</a> one's fully formed thoughts to a social network of one's choice, or in a blinding rage one can <a href="#" onclick="app.clearAll();return false">clear</a> all of the thoughts. This is a toy by <a href="http://bendetat.com">Ben Scott</a>. It uses <a href="https://github.com/markdown-it/markdown-it">markdown-it</a> and <a href="http://tholman.com/github-corners/">GitHub Corners</a>. If something goes wrong, please <a href="https://github.com/bendetat/rubber-duck/issues">let me know</a> if you would be so kind, and try clearing local storage and reloading or just close the tab and make a cup of tea I guess. I bill in ten minute increments. The duck is free. Doesn't have a bill. Except ducks generally do have bills. This joke isn't really going anywhere. Probably need to workshop it. I could do that on this website. Swings and roundabouts, you see.
 	</p>
 
